--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container" text-align="center">
 
       <div class="main-part">
-        <h1>Learn The Weather</h1></br>
+        <h1>Know The Weather</h1></br>
         <form class="form-box" action="/" method="post">
           <label for="cityInput">City Name</label></br>
           <input id="cityInput" type="text" name="cityName" autocomplete="off"></br>
