--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Know The Weather</h1></br>
         <form class="form-box" action="/" method="post">
           <label for="cityInput">City Name</label></br>
-          <input id="cityInput" type="text" name="cityName" autocomplete="off"></br>
+          <input id="cityInput" type="text" name="cityName" placeholder="Enter City Name Here" autocomplete="off"></br>
           <button type="submit">GO</button>
         </form>
       </div>
